name:                smart-constructors
version:             0.1.0.0
cabal-version:       1.2
build-type:          Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     SerialNumber
  build-depends:       base >= 4.7 && < 5
                     , either
                     , unordered-containers
                     , template-haskell
                     , text
  ghc-options:         -Wall
