name:                smart-constructors
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >= 1.2

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     SerialNumber
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , text
  ghc-options:         -Wall
